--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eloquent javaScript practices...</title>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 
 <body>
   This is the page.
+  <h1 id="head">This is the heading</h1>
+  <p class="para">This is an expample of a paragraph. Nothing important is included here...</p>
   <script src="index.js" type="text/javascript"></script>
+  
 </body>
 
 </html>
