--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eloquent javaScript practices...</title>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <link href="./style.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
   This is the page.
   <h1 id="head">This is the heading</h1>
   <p class="para">This is an expample of a paragraph. Nothing important is included here...</p>
+  <p class="info">A piece of info</p>
   <script src="index.js" type="text/javascript"></script>
   
 </body>
