moving through the DOM nodes - exercises...

--- a/index.html
+++ b/index.html
@@ -9,10 +9,23 @@
 </head>
 
 <body>
-  This is the page.
-  <h1 id="head">This is the heading</h1>
-  <p class="para">This is an expample of a paragraph. Nothing important is included here...</p>
-  <p class="info">A piece of info</p>
+  <div id="list">
+    <button onclick="showText(0)">Show paragraph 1</button>
+    <button onclick="showText(1)">Show paragraph 2</button>
+    <button onclick="showText(2)">Show paragraph 3</button>
+    <p>
+      Paragraph one ;sldkjalfgka  lkfja;lk ;lkdfgja ;lsdfkg a;dlfkg jad;lfkg .
+      
+    </p>
+    <p>
+      Paragraph two sdfkga;dflkj adflkgja ;dflkg d;lfkgj dlfkgj s;dlfk gjsdlkf g.
+      <button onclick="hideText(0)">Hide the previous</button>
+      <button onclick="hideText(1)">Hide the next</button>
+    </p>
+    <p>
+      Paragraph three ;sldfka ;lsdkg a;lskja;lskdj ;asldkja; sd;alksdj a;lksd a;lskd galsk ga;lskdgja sdklfa ;lk .
+    </p>
+  </div>
   <script src="index.js" type="text/javascript"></script>
   
 </body>
