--- a/index.html
+++ b/index.html
@@ -30,9 +30,38 @@
       Paragraph three ;sldfka ;lsdkg a;lskja;lskdj ;asldkja; sd;alksdj a;lksd a;lskd galsk ga;lskdgja sdklfa ;lk .
     </p>
   </div>
-  <!-- -----------------------------------------------game----------------------------------------------- -->
-  <h3>A recruitment game</h3>
-  <p>You are now at <span id = "output"></span>.</p><button onclick = "throwCube()">Throw a cube</button>
+  <!-- ----------------------------------------game------------------------------------------------------ --> 
+  <h3 style="text-align: center">A recruitment game</h3>
+  
+  
+
+  
+  
+  <div id="board">
+    <div id="startField" class="field"><p class="number">0</p></div>
+    <div class="field"><p class="number">1</p></div>
+    <div class="field"><p class="number">2</p></div>
+    <div class="field"><p class="number">3</p></div>
+    <div class="field"><p class="number">4</p></div>
+    <div class="field"><p class="number">5</p></div>
+    <div class="field"><p class="number">6</p></div>
+    <div class="field"><p class="number">7</p></div>
+    <div class="field"><p class="number">8</p></div>
+    <div class="field"><p class="number">9</p></div>
+    <div class="field"><p class="number">10</p></div>
+    <div class="field"><p class="number">11</p></div>
+    <div class="field"><p class="number">12</p></div>
+    <div class="field"><p class="number">13</p></div>
+    <div class="field"><p class="number">14</p></div>
+    <div class="field"><p class="number">15</p></div>
+    <div class="field"><p class="number">16</p></div>
+    <div class="field"><p class="number">17</p></div>
+    <div class="field"><p class="number">18</p></div>
+    <div class="field"><p class="number">19</p></div>
+    <div class="field"><p class="number">20</p></div>
+  </div>
+  <p id = "outputid"></p>
+  <button id="cube" onclick = "throwCube()">Throw a cube</button>
   <script src="index.js" type="text/javascript"></script>
   
 </body>
