A pre-final version of a simple board game..

--- a/index.html
+++ b/index.html
@@ -31,12 +31,7 @@
     </p>
   </div>
   <!-- ----------------------------------------game------------------------------------------------------ --> 
-  <h3 style="text-align: center">A recruitment game</h3>
-  
-  
-
-  
-  
+  <h3 style="text-align: center">A game for recruitment process ASSECO</h3>
   <div id="board">
     <div id="startField" class="field"><p class="number">0</p></div>
     <div class="field"><p class="number">1</p></div>
