--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eloquent javaScript practices...</title>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <link href="bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet" />
   <link href="./style.css" type="text/css" rel="stylesheet" />
 </head>
 
@@ -31,34 +33,47 @@
     </p>
   </div>
   <!-- ----------------------------------------game------------------------------------------------------ --> 
-  <h3 style="text-align: center">A game for recruitment process ASSECO</h3>
-  <div id="board">
-    <div id="startField" class="field"><p class="number">0</p></div>
-    <div class="field"><p class="number">1</p></div>
-    <div class="field"><p class="number">2</p></div>
-    <div class="field"><p class="number">3</p></div>
-    <div class="field"><p class="number">4</p></div>
-    <div class="field"><p class="number">5</p></div>
-    <div class="field"><p class="number">6</p></div>
-    <div class="field"><p class="number">7</p></div>
-    <div class="field"><p class="number">8</p></div>
-    <div class="field"><p class="number">9</p></div>
-    <div class="field"><p class="number">10</p></div>
-    <div class="field"><p class="number">11</p></div>
-    <div class="field"><p class="number">12</p></div>
-    <div class="field"><p class="number">13</p></div>
-    <div class="field"><p class="number">14</p></div>
-    <div class="field"><p class="number">15</p></div>
-    <div class="field"><p class="number">16</p></div>
-    <div class="field"><p class="number">17</p></div>
-    <div class="field"><p class="number">18</p></div>
-    <div class="field"><p class="number">19</p></div>
-    <div class="field"><p class="number">20</p></div>
+  <h3 id="game_title">A game for recruitment process ASSECO</h3>
+    <div id="board" class="container">
+      <div class="row">
+        <div id="startField" class="field col-xs-1"><p class="number">0</p></div>  
+        <div class="field col-xs-1"><p class="number">1</p></div>
+        <div class="field col-xs-1"><p class="number">2</p></div>
+        <div class="field col-xs-1"><p class="number">3</p></div>
+        <div class="field col-xs-1"><p class="number">4</p></div>
+        <div class="field col-xs-1"><p class="number">5</p></div>
+        <div class="field col-xs-1"><p class="number">6</p></div>
+        <div class="field col-xs-1"><p class="number">7</p></div>
+        <div class="field col-xs-1"><p class="number">8</p></div>
+        <div class="field col-xs-1"><p class="number">9</p></div>
+        <div class="field col-xs-1"><p class="number">10</p></div>
+        <div class="field col-xs-1"><p class="number">11</p></div>
+      </div>
+      <div class="row">
+        <div class="field col-xs-1"><p class="number">12</p></div>
+        <div class="field col-xs-1"><p class="number">13</p></div>
+        <div class="field col-xs-1"><p class="number">14</p></div>
+        <div class="field col-xs-1"><p class="number">15</p></div>
+        <div class="field col-xs-1"><p class="number">16</p></div>
+        <div class="field col-xs-1"><p class="number">17</p></div>
+        <div class="field col-xs-1"><p class="number">18</p></div>
+        <div class="field col-xs-1"><p class="number">19</p></div>
+        <div class="field col-xs-1"><p class="number">20</p></div>
+      </div>  
+        
+     </div>
   </div>
-  <p id = "outputid"></p>
-  <button id="cube" onclick = "throwCube()">Throw a cube</button>
-  <script src="index.js" type="text/javascript"></script>
+  <div class="container">
+    <div class="row">
+        <p id = "outputid" class="col-xs-6 col-xs-offset-3"></p>
+    </div>
+  </div>
   
+  <button id="cube" onclick = "throwCube()">Throw a cube</button>
+  
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+  <script src="index.js" type="text/javascript"></script>
 </body>
 
 </html>
